# dcs-force-feedback-fix

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  dinput8.def  dinput8.ini
docs/: PLAN-device-reconnect.md
src/: config.cpp  config.h  dllmain.cpp  ffb_filter.cpp  ffb_filter.h  ffb_state_registry.cpp  ffb_state_registry.h  logger.cpp  logger.h  proxy.cpp  proxy.h  wrapper_device8.cpp  wrapper_device8.h  wrapper_dinput8.cpp  wrapper_dinput8.h  wrapper_effect.cpp  wrapper_effect.h
